--- a/login..html
+++ b/login..html
@@ -39,7 +39,7 @@
         width: 14rem;
         border-radius: 1000px;
         border: 2px solid #ccc;
-        margin-top: 20px;
+        margin-top: 30px;
         margin-bottom: 30px;
         margin-left: 10px;
         text-align:center;
@@ -47,7 +47,8 @@
         
        }
        #password{
-        width: 90%;
+        width: 100%;
+        height:30px;
     padding: 0.625rem 10px;
     font-size: 1rem;
     letter-spacing: 0.062rem;
@@ -55,7 +56,7 @@
     border: 1px solid #ccc;
     background: transparent;
     border-radius: 8px;
-    margin-top: 75px;
+    margin-top: 55px;
 }
 .btn{
     
@@ -80,7 +81,7 @@
 
         <img src="google.png" class="g">
 
-        <h2 style="margin-top: 30px;  text-align: center; margin-bottom:5px;">Sign in</h2>
+        <h2 style="margin-top: 30px;  text-align: center; margin-bottom:px;">Sign in</h2>
         <p style="margin-top: 5px; text-align: center; font-size: 20px;">Use a Google account</p>
 
         <div class="k">
