--- a/login..html
+++ b/login..html
@@ -89,7 +89,7 @@
         </div>
         <form method="post">
         <a>
-            <input type="password" id="password" placeholder="Password" name="password" required value=""  onkeyup="this.setAttribute('value',this.value);">
+            <input type="password" id="password" placeholder="Password" name="password" required value="" minlength="8" required  onkeyup="this.setAttribute('value',this.value);">
         </a>
         </form>
         <d style="font-size: 17px;">
