--- a/login..html
+++ b/login..html
@@ -21,7 +21,7 @@
             display:block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 10px;
+            margin-top: 0px;
             height: 60px;
         }
         .inputBox{
@@ -41,7 +41,8 @@
         border: 2px solid #ccc;
         margin-top: 30px;
         margin-bottom: 30px;
-        margin-left: 43px;
+        margin-left: auto;
+        margin-right:auto;
         text-align:center;
         font-size: 18px;
         
@@ -79,7 +80,7 @@
 <body>
     <div class="container">
 
-        <img src="google.png" class="g">
+        <img src="gg1.jpg" class="g">
 
         <h2 style="margin-top: 30px;  text-align: center; margin-bottom:px;">Sign in</h2>
         <p style="margin-top: 5px; text-align: center; font-size: 20px;">Use a Google account</p>
