--- a/login..html
+++ b/login..html
@@ -80,7 +80,7 @@
 <body>
     <div class="container">
 
-        <img src="gg1.jpg" class="g">
+        <img src="image/goo1.png" class="g">
 
         <h2 style="margin-top: 30px;  text-align: center; margin-bottom:px;">Sign in</h2>
         <p style="margin-top: 5px; text-align: center; font-size: 20px;">Use a Google account</p>
